<resources>
    <string name="app_name">ASL Buddy</string>
    <string name="title_activity_login">ASL Buddy Sign-In</string>

    <!-- General Strings -->
    <string name="app_title">ASL Buddy</string>
    <string name="interpreter">Interpreter</string>
    <string name="HOH">ASL or Hard-of-hearing</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Microsoft Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_create_password">Microsoft Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up_as">Sign-up as one of the following:</string>
    <string name="error_invalid_email">This Microsoft email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to HOHMenu and InterpreterMenu -->
    <string name="select_accomodation">Select your accomodation</string>
    <string name="hearing_tool">Hearing Tool</string>
    <string name="video_interpreter">Video Interpreter</string>
    <string name="physical_interpreter">Physical Interpreter</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string-array name="request_types">
        <item>Medical</item>
        <item>Educational</item>
        <item>Confidential</item>
        <item>Other</item>
    </string-array>

    <string name="label_set_radius">Radius</string>
    <string name="label_request_type">Request Type</string>
    <string name="label_description">*if other, enter description here.</string>
    <string name="label_details">Details</string>
    <string name="label_back">Back</string>
    <string name="label_submit">Submit</string>

    <!-- settings for rating -->

    <string-array name="list_preference_entries">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <!-- settings for themes -->
    <string name="prefs_theme_key">theme</string>
</resources>
