<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
    <SwitchPreference
        android:defaultValue="false"
        android:title="Location enable"
        android:key="switch_preference_2" />
    <MultiSelectListPreference
        android:title="Minimum rating"
        android:defaultValue="Blue"
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_entries"
        android:key="multi_select_list_preference_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ListPreference
        android:defaultValue="1"
        android:title="Theme"
        android:entries="@android:array/phoneTypes"
        android:entryValues="@array/pref_themes"
        android:key="list_preference_2"
        android:selectable="false" />
    <ListPreference
        android:defaultValue="1"
        android:title="Captions"
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_entries"
        android:key="list_preference_3" />
    <ListPreference
        android:defaultValue="1"
        android:title="About"
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_entries"
        android:key="list_preference_4" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>
